--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,10 @@ body{
     height: 300px;
 }
 /* ////////////////////////////////// */
-
+.card{
+        height: 500px;
+    max-width: 350px;
+}
 .btn-products{
     background-color:  rgb(247, 151, 167);
 }
